# memory_mcp

./: .bumpversion.cfg  .justfile  Containerfile  README.md  docker-compose.yml  pyproject.toml
deploy/: buildconfig.yaml  deployment.yaml  imagestream.yaml  pvc.yaml  route.yaml  secret.yaml  service.yaml
src/memory_mcp/: server.py
tests/: conftest.py
